[tool.poetry]
name = "find_the_site"
version = "0.1.0"
description = "Find the site in duckduckgo"
authors = ["serhii <aserhii@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/serhii73/find_the_site"
repository = "https://github.com/serhii73/find_the_site"
keywords = ["find", "search", "company website", "brand website"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
]


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
beautifulsoup4 = "^4.7.1"
user-agent = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
